production/service_management/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-management
  namespace: production
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-management
  template:
    metadata:
      labels:
        app: service-management
    spec:
      imagePullSecrets:
      - name: aws-ecr-cred
      containers:
      - name: service-management
        image: 024955634588.dkr.ecr.us-east-1.amazonaws.com/service_management:6b87943b-20251218043659
        ports:
        - containerPort: 8002
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"
