production/service_management/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-management
  namespace: production
spec:
  type: ClusterIP
  selector:
    app: service-management
  ports:
  - port: 80
    targetPort: 8002
