production/service_management/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: service-management
  namespace: production
spec:
  hosts:
  - "*"
  gateways:
  - salon-gateway
  http:
  - match:
    - uri:
        prefix: /service-management
    route:
    - destination:
        host: service-management
        port:
          number: 80
